testsuite/tests/polykinds/T9017.hs
{-# LANGUAGE PolyKinds #-}

module T9017 where

import Control.Arrow

foo :: a b (m b)
foo = arr return
